# update-notifier-mate

./: CMakeLists.txt  README.md  simple.make
