CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(update-notifier-mate)

FIND_PACKAGE(Ruby 1.9 REQUIRED)

FUNCTION(FIND_RUBY_LIBRARY LIBRARY REQUIRED)
    MESSAGE(STATUS "Checking for ruby library ${LIBRARY}")
    SET(_RUBY_ARGS -e "require '${LIBRARY}'; STDOUT.puts 1")
    EXECUTE_PROCESS(COMMAND ${RUBY_EXECUTABLE} ${_RUBY_ARGS}
        RESULT_VARIABLE _RUBY_LIB_FOUND
        ERROR_QUIET
    )

    IF(NOT _RUBY_LIB_FOUND EQUAL 0)
        IF(REQUIRED MATCHES "REQUIRED")
            MESSAGE(FATAL_ERROR "Ruby library ${LIBRARY} not found")
        ELSE(REQUIRED MATCHES "REQUIRED")
            MESSAGE(STATUS "Ruby library ${LIBRARY} not found")
        ENDIF(REQUIRED MATCHES "REQUIRED")
    ELSE(NOT _RUBY_LIB_FOUND EQUAL 0)
        MESSAGE(STATUS "Ruby library ${LIBRARY} found")
    ENDIF(NOT _RUBY_LIB_FOUND EQUAL 0)
ENDFUNCTION(FIND_RUBY_LIBRARY)

FIND_RUBY_LIBRARY(gtk3 REQUIRED)
FIND_RUBY_LIBRARY(gettext REQUIRED)


INSTALL(PROGRAMS bin/update_notifier_mate DESTINATION bin)

